# edn_conf

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
edn_conf/: core.py  tags.edn  tags.py
